[gd_scene load_steps=31 format=2]

[ext_resource path="res://world1/level1.tres" type="TileSet" id=1]
[ext_resource path="res://level-select/shiproom1.png" type="Texture" id=2]
[ext_resource path="res://level.gd" type="Script" id=3]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://camera/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://level-select/shipWireframe.tres" type="TileSet" id=6]
[ext_resource path="res://common/LadderTop.tscn" type="PackedScene" id=7]
[ext_resource path="res://common/Ladder.tscn" type="PackedScene" id=8]
[ext_resource path="res://NPCs/DialogBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Music/startSong.gd" type="Script" id=10]
[ext_resource path="res://level-select/ForeGroundCollider.gd" type="Script" id=11]
[ext_resource path="res://level-select/shiproomForeground.png" type="Texture" id=12]
[ext_resource path="res://Music/lvl1intro.ogg" type="AudioStream" id=13]
[ext_resource path="res://level-select/background.png" type="Texture" id=14]
[ext_resource path="res://common/TileInstancer.gd" type="Script" id=15]
[ext_resource path="res://common/SpawnPoint.gd" type="Script" id=16]
[ext_resource path="res://level-select/TimepieceDisplay.gd" type="Script" id=17]
[ext_resource path="res://level-select/exclamation.png" type="Texture" id=18]
[ext_resource path="res://level-select/timepiecesboard.png" type="Texture" id=19]
[ext_resource path="res://common/CameraCapture.tscn" type="PackedScene" id=20]
[ext_resource path="res://cutscenes/Timmy.tscn" type="PackedScene" id=21]
[ext_resource path="res://cutscenes/LilenController.tscn" type="PackedScene" id=22]
[ext_resource path="res://cutscenes/cloud.png" type="Texture" id=23]
[ext_resource path="res://cutscenes/DustCloud.gd" type="Script" id=24]
[ext_resource path="res://level-select/Door.tscn" type="PackedScene" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 4, 18 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 18 )
region = Rect2( 4, 0, 4, 18 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 180, 24 )

[node name="Level" type="Node2D"]
script = ExtResource( 3 )
left = -112
right = 336
up = -224
down = 64
col = Color( 1, 1, 1, 1 )

[node name="LevelTiles" type="TileMap" parent="."]
z_index = -3
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
collision_layer = 2
collision_mask = 3
format = 1
tile_data = PoolIntArray( -851976, 1, 0, -851975, 1, 0, -851974, 1, 0, -851973, 1, 0, -851972, 1, 0, -851971, 1, 0, -851970, 1, 0, -851969, 1, 0, -917504, 1, 0, -917503, 1, 0, -917502, 1, 0, -917501, 1, 0, -917500, 1, 0, -917499, 1, 0, -917498, 1, 0, -917497, 1, 0, -917496, 1, 0, -917495, 1, 0, -917494, 1, 0, -917493, 1, 0, -917492, 1, 0, -917491, 1, 0, -917490, 1, 0, -917489, 1, 0, -917488, 1, 0, -917487, 1, 0, -917486, 1, 0, -917485, 1, 0, -917484, 1, 0, -917483, 1, 0, -786440, 1, 0, -786439, 1, 0, -786438, 1, 0, -786437, 1, 0, -786436, 1, 0, -786435, 1, 0, -786434, 1, 0, -786433, 1, 0, -851968, 1, 0, -851967, 1, 0, -851966, 1, 0, -851965, 1, 0, -851964, 1, 0, -851963, 1, 0, -851962, 1, 0, -851961, 1, 0, -851960, 1, 0, -851959, 1, 0, -851958, 1, 0, -851957, 1, 0, -851956, 1, 0, -851955, 1, 0, -851954, 1, 0, -851953, 1, 0, -851952, 1, 0, -851951, 1, 0, -851950, 1, 0, -851949, 1, 0, -851948, 1, 0, -851947, 1, 0, -720904, 1, 0, -720903, 1, 0, -720902, 1, 0, -720901, 1, 0, -720900, 1, 0, -720899, 1, 0, -720898, 1, 0, -720897, 1, 0, -786432, 1, 0, -786431, 1, 0, -786430, 1, 0, -786429, 1, 0, -786428, 1, 0, -786427, 1, 0, -786426, 1, 0, -786425, 1, 0, -786424, 1, 0, -786423, 1, 0, -786422, 1, 0, -786421, 1, 0, -786420, 1, 0, -786419, 1, 0, -786418, 1, 0, -786417, 1, 0, -786416, 1, 0, -786415, 1, 0, -786414, 1, 0, -786413, 1, 0, -786412, 1, 0, -786411, 1, 0, -655368, 1, 0, -655367, 1, 0, -655366, 1, 0, -655365, 1, 0, -655364, 1, 0, -655363, 1, 0, -655362, 1, 0, -655361, 1, 0, -720896, 1, 0, -720895, 1, 0, -720894, 1, 0, -720893, 1, 0, -720892, 1, 0, -720891, 1, 0, -720890, 1, 0, -720889, 1, 0, -720888, 1, 0, -720887, 1, 0, -720886, 1, 0, -720885, 1, 0, -720884, 1, 0, -720883, 1, 0, -720882, 1, 0, -720881, 1, 0, -720880, 1, 0, -720879, 1, 0, -720878, 1, 0, -720877, 1, 0, -720876, 1, 0, -720875, 1, 0, -589832, 1, 0, -589831, 1, 0, -589830, 1, 0, -589829, 1, 0, -589828, 1, 0, -589827, 1, 0, -589826, 1, 0, -589825, 1, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -655357, 1, 0, -655356, 1, 0, -655355, 1, 0, -655354, 1, 0, -655353, 1, 0, -655352, 1, 0, -655351, 1, 0, -655350, 1, 0, -655349, 1, 0, -655348, 1, 0, -655347, 1, 0, -655346, 1, 0, -655345, 1, 0, -655344, 1, 0, -655343, 1, 0, -655342, 1, 0, -655341, 1, 0, -655340, 1, 0, -655339, 1, 0, -524296, 1, 0, -524295, 0, 0, -524294, 0, 1, -524293, 0, 1, -524292, 0, 1, -524291, 0, 1, -524290, 0, 1, -524289, 0, 1, -589824, 0, 1, -589823, 0, 1, -589822, 0, 1, -589821, 0, 1, -589820, 0, 1, -589819, 0, 1, -589818, 0, 1, -589817, 0, 1, -589816, 0, 1, -589815, 0, 1, -589814, 0, 1, -589813, 0, 1, -589812, 0, 1, -589811, 0, 1, -589810, 0, 1, -589809, 0, 1, -589808, 0, 1, -589807, 0, 1, -589806, 0, 1, -589805, 0, 1, -589804, 0, 2, -589803, 1, 0, -458760, 1, 0, -458759, 0, 65536, -458758, 0, 65537, -458757, 0, 65537, -458756, 0, 65537, -458755, 0, 65537, -458754, 0, 65537, -458753, 0, 65537, -524288, 0, 65537, -524287, 0, 65537, -524286, 0, 65537, -524285, 0, 65537, -524284, 0, 65537, -524283, 0, 65537, -524282, 0, 65537, -524281, 0, 65537, -524280, 0, 65537, -524279, 0, 65537, -524278, 0, 65537, -524277, 0, 65537, -524276, 0, 65537, -524275, 0, 65537, -524274, 0, 65537, -524273, 0, 65537, -524272, 0, 65537, -524271, 0, 65537, -524270, 0, 65537, -524269, 0, 65537, -524268, 0, 65538, -524267, 1, 0, -393224, 1, 0, -393223, 0, 65536, -393222, 0, 65537, -393221, 0, 65537, -393220, 0, 65537, -393219, 0, 65537, -393218, 0, 65537, -393217, 0, 65537, -458752, 0, 65537, -458751, 0, 65537, -458750, 0, 65537, -458749, 0, 65537, -458748, 0, 65537, -458747, 0, 65537, -458746, 0, 65537, -458745, 0, 65537, -458744, 0, 65537, -458743, 0, 65537, -458742, 0, 65537, -458741, 0, 65537, -458740, 0, 65537, -458739, 0, 65537, -458738, 0, 65537, -458737, 0, 65537, -458736, 0, 65537, -458735, 0, 65537, -458734, 0, 65537, -458733, 0, 65537, -458732, 0, 65538, -458731, 1, 0, -327688, 1, 0, -327687, 0, 65536, -327686, 0, 65537, -327685, 0, 65537, -327684, 0, 65537, -327683, 0, 65537, -327682, 0, 65537, -327681, 0, 65537, -393216, 0, 65537, -393215, 0, 65537, -393214, 0, 65537, -393213, 0, 65537, -393212, 0, 65537, -393211, 0, 65537, -393210, 0, 65537, -393209, 0, 65537, -393208, 0, 65537, -393207, 0, 65537, -393206, 0, 65537, -393205, 0, 65537, -393204, 0, 65537, -393203, 0, 65537, -393202, 0, 65537, -393201, 0, 65537, -393200, 0, 65537, -393199, 0, 65537, -393198, 0, 65537, -393197, 0, 65537, -393196, 0, 65538, -393195, 1, 0, -262152, 1, 0, -262151, 0, 65536, -262150, 0, 65537, -262149, 0, 65537, -262148, 0, 65537, -262147, 0, 65537, -262146, 0, 65537, -262145, 0, 65537, -327680, 0, 65537, -327679, 0, 65537, -327678, 0, 65537, -327677, 0, 65537, -327676, 0, 65537, -327675, 0, 65537, -327674, 0, 65537, -327673, 0, 65537, -327672, 0, 65537, -327671, 0, 65537, -327670, 0, 65537, -327669, 0, 65537, -327668, 0, 65537, -327667, 0, 65537, -327666, 0, 65537, -327665, 0, 65537, -327664, 0, 65537, -327663, 0, 65537, -327662, 0, 65537, -327661, 0, 65537, -327660, 0, 65538, -327659, 1, 0, -196616, 1, 0, -196615, 0, 65536, -196614, 0, 65537, -196613, 0, 65537, -196612, 0, 65537, -196611, 0, 65537, -196610, 0, 65537, -196609, 0, 65537, -262144, 0, 65537, -262143, 0, 65537, -262142, 0, 65537, -262141, 0, 65537, -262140, 0, 65537, -262139, 0, 65537, -262138, 0, 65537, -262137, 0, 65537, -262136, 0, 65537, -262135, 0, 65537, -262134, 0, 65537, -262133, 0, 65537, -262132, 0, 65537, -262131, 0, 65537, -262130, 0, 65537, -262129, 0, 65537, -262128, 0, 65537, -262127, 0, 65537, -262126, 0, 65537, -262125, 0, 65537, -262124, 0, 65538, -262123, 1, 0, -131080, 1, 0, -131079, 0, 65536, -131078, 0, 65537, -131077, 0, 65537, -131076, 0, 65537, -131075, 0, 65537, -131074, 0, 65537, -131073, 0, 65537, -196608, 0, 65537, -196607, 0, 65537, -196606, 0, 65537, -196605, 0, 65537, -196604, 0, 65537, -196603, 0, 65537, -196602, 0, 65537, -196601, 0, 65537, -196600, 0, 65537, -196599, 0, 65537, -196598, 0, 65537, -196597, 0, 65537, -196596, 0, 65537, -196595, 0, 65537, -196594, 0, 65537, -196593, 0, 65537, -196592, 0, 65537, -196591, 0, 65537, -196590, 0, 65537, -196589, 0, 65537, -196588, 0, 65538, -196587, 1, 0, -65544, 1, 0, -65543, 0, 65536, -65542, 0, 65537, -65541, 0, 65537, -65540, 0, 65537, -65539, 0, 65537, -65538, 0, 65537, -65537, 0, 65537, -131072, 0, 65537, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65537, -131065, 0, 65537, -131064, 0, 65537, -131063, 0, 65537, -131062, 0, 65537, -131061, 0, 65537, -131060, 0, 65537, -131059, 0, 65537, -131058, 0, 65537, -131057, 0, 65537, -131056, 0, 65537, -131055, 0, 65537, -131054, 0, 65537, -131053, 0, 65537, -131052, 0, 65538, -131051, 1, 0, -8, 1, 0, -7, 0, 131072, -6, 0, 131073, -5, 0, 131073, -4, 0, 131073, -3, 0, 131073, -2, 0, 131073, -1, 0, 131073, -65536, 0, 131073, -65535, 0, 131073, -65534, 0, 131073, -65533, 0, 131073, -65532, 0, 131073, -65531, 0, 131073, -65530, 0, 131073, -65529, 0, 131073, -65528, 0, 131073, -65527, 0, 131073, -65526, 0, 131073, -65525, 0, 131073, -65524, 0, 131073, -65523, 0, 131073, -65522, 0, 131073, -65521, 0, 131073, -65520, 0, 131073, -65519, 0, 131073, -65518, 0, 131073, -65517, 0, 131073, -65516, 0, 131074, -65515, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 131064, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 196600, 1, 0, 196601, 1, 0, 196602, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 262136, 1, 0, 262137, 1, 0, 262138, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0 )
script = ExtResource( 15 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 112, -64 )
z_index = -2
texture = ExtResource( 14 )

[node name="BackgroundTiles" type="TileMap" parent="."]
position = Vector2( 8, 8 )
z_index = -1
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
collision_layer = 2
collision_mask = 3
format = 1
tile_data = PoolIntArray( -196612, 17, 0, -196611, 17, 0, -196610, 17, 0, -196609, 17, 0, -262144, 17, 0, -262143, 17, 0, -262142, 17, 0, -262141, 17, 0, -262140, 17, 0, -262139, 17, 0, -262138, 17, 0, -262136, 17, 0, -262135, 17, 0, -262134, 17, 0, -262133, 17, 0, -262132, 17, 0, -262131, 17, 0, -262130, 17, 0, -262129, 17, 0, -262128, 17, 0 )
script = ExtResource( 15 )

[node name="shiproom1" type="Sprite" parent="."]
position = Vector2( 112, -80 )
z_index = -1
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -60, -54 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Display" type="Node2D" parent="."]
position = Vector2( 36, -80 )
script = ExtResource( 17 )

[node name="TimePieces" type="Sprite" parent="Display"]
visible = false
texture = ExtResource( 19 )

[node name="Exclamation" type="AnimatedSprite" parent="Display"]
visible = false
z_index = -1
frames = SubResource( 4 )
frame = 1
playing = true

[node name="DialogBox" parent="Display" instance=ExtResource( 9 )]
position = Vector2( 0, -4 )

[node name="DoorDialog" parent="." instance=ExtResource( 9 )]
position = Vector2( 304, -40 )
dialog_num = 5
active_bodies_in_dialog = [ NodePath("../Player"), NodePath("../LilenController"), NodePath("../DustCloud") ]
animate1 = NodePath("../Player")
animate2 = NodePath("../Timmy")

[node name="Door" parent="DoorDialog" instance=ExtResource( 25 )]
position = Vector2( 0, 8 )
scale = Vector2( -1, 1 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( -32, -80 )
rotation = 4.46638e-06

[node name="Timmy" parent="." instance=ExtResource( 21 )]
visible = false
position = Vector2( 304, -32 )

[node name="shiproomForeground" type="Sprite" parent="."]
position = Vector2( 112, -80 )
z_index = 3
texture = ExtResource( 12 )

[node name="Camera" parent="." instance=ExtResource( 5 )]
position = Vector2( 48, -80 )
process_mode = 0
limit_left = -10000126
drag_margin_v_enabled = true
smoothing_speed = 12.0

[node name="Node" type="Node" parent="."]

[node name="MusicIntro" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 13 )
autoplay = true
bus = "Music"

[node name="Music" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 10 )
music = 2

[node name="Ladder3" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 128, -48 )

[node name="Ladder" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 128, -24 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 11 )
foregroundSprite = NodePath("../shiproomForeground")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 108, -32 )
shape = SubResource( 5 )

[node name="Spawn" type="Node2D" parent="." groups=[
"spawn",
]]
position = Vector2( 304, -40 )
script = ExtResource( 16 )
spawn_num = 2

[node name="WalkTo_DisplayTarget" type="Node2D" parent="."]
position = Vector2( 8, -64 )

[node name="CameraCapture" parent="." instance=ExtResource( 20 )]
position = Vector2( 176, -96 )
scale = Vector2( 1e-05, 0.1 )
release_on_exit = false
walled = false
collision_enabled = false

[node name="CameraCapture2" parent="." instance=ExtResource( 20 )]
position = Vector2( 48, -104 )
scale = Vector2( 1e-05, 1e-05 )
release_on_exit = false
walled = false
collision_enabled = false

[node name="WalkTo_Target1" type="Node2D" parent="."]
position = Vector2( 256, -24 )

[node name="WalkTo_Target2" type="Node2D" parent="."]
position = Vector2( 64, -96 )

[node name="WalkTo_Target3" type="Node2D" parent="."]
position = Vector2( 112, -64 )

[node name="WalkTo_Target4" type="Node2D" parent="."]
position = Vector2( 280, -24 )

[node name="Teleport_Target" type="Node2D" parent="."]
position = Vector2( 264, -72 )

[node name="Teleport_Target2" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="LilenController" parent="." instance=ExtResource( 22 )]
position = Vector2( 304, -24 )
goal = Vector2( 96, -64 )

[node name="DustCloud" type="Sprite" parent="."]
visible = false
position = Vector2( 96, -88 )
z_index = 1
texture = ExtResource( 23 )
script = ExtResource( 24 )

[node name="Tween" type="Tween" parent="DustCloud"]

[node name="HatKidRoom" parent="." instance=ExtResource( 9 )]
position = Vector2( -30, -40 )
dialog_num = 18

[node name="Door" parent="HatKidRoom" instance=ExtResource( 25 )]
position = Vector2( -2, 8 )

[node name="Spawn2" type="Node2D" parent="." groups=[
"spawn",
]]
position = Vector2( -30, -40 )
script = ExtResource( 16 )
spawn_num = 3

[connection signal="action1" from="Display/DialogBox" to="Display" method="pressed"]
[connection signal="action2" from="Display/DialogBox" to="CameraCapture" method="capture"]
[connection signal="action3" from="Display/DialogBox" to="DoorDialog" method="enable"]
[connection signal="action4" from="Display/DialogBox" to="CameraCapture2" method="capture_release" binds= [ false ]]
[connection signal="action5" from="Display/DialogBox" to="Display" method="set_to_exclamation"]
[connection signal="action6" from="Display/DialogBox" to="CameraCapture2" method="capture"]
[connection signal="action7" from="Display/DialogBox" to="Player" method="bounce_back" binds= [ "../WalkTo_DisplayTarget" ]]
[connection signal="action8" from="Display/DialogBox" to="DoorDialog" method="enable"]
[connection signal="action8" from="Display/DialogBox" to="DoorDialog" method="set_dialog_option" binds= [ 10 ]]
[connection signal="action1" from="DoorDialog" to="Player" method="watch_node" binds= [ "../Timmy" ]]
[connection signal="action1" from="DoorDialog" to="Player" method="bounce_back" binds= [ "../WalkTo_Target4" ]]
[connection signal="action1" from="DoorDialog" to="Timmy" method="make_visible"]
[connection signal="action2" from="DoorDialog" to="Timmy" method="walk_to" binds= [ "../WalkTo_Target1" ]]
[connection signal="action3" from="DoorDialog" to="CameraCapture2" method="capture"]
[connection signal="action4" from="DoorDialog" to="Timmy" method="teleport_to" binds= [ "../Teleport_Target" ]]
[connection signal="action4" from="DoorDialog" to="Timmy" method="walk_to" binds= [ "../WalkTo_Target2", -1, 1 ]]
[connection signal="action5" from="DoorDialog" to="Player" method="teleport_to" binds= [ "../Teleport_Target" ]]
[connection signal="action5" from="DoorDialog" to="Player" method="walk_to" binds= [ "../WalkTo_Target3" ]]
[connection signal="action6" from="DoorDialog" to="Player" method="fly_to" binds= [ "../WalkTo_Target2" ]]
[connection signal="action7" from="DoorDialog" to="Player" method="blow_back" binds= [ true ]]
[connection signal="action7" from="DoorDialog" to="CameraCapture2" method="capture_release" binds= [ false ]]
[connection signal="action8" from="DoorDialog" to="Player" method="stop_watching"]
[connection signal="action9" from="DoorDialog" to="Camera" method="screen_shake" binds= [ 0, 3.0 ]]
[connection signal="action9" from="DoorDialog" to="LilenController" method="generate" binds= [ 16 ]]
[connection signal="actionA" from="DoorDialog" to="Timmy" method="walk_to" binds= [ "../WalkTo_Target4", 1, 1 ]]
[connection signal="actionA" from="DoorDialog" to="DustCloud" method="hide"]
[connection signal="actionA" from="DoorDialog" to="LilenController" method="hide_after_reaching_pos"]
[connection signal="actionA" from="DoorDialog" to="LilenController" method="recall"]
[connection signal="actionA" from="DoorDialog" to="LilenController" method="get_timepieces"]
[connection signal="actionB" from="DoorDialog" to="Timmy" method="walk_to_then_leave" binds= [ "../DoorDialog" ]]
[connection signal="actionC" from="DoorDialog" to="Player" method="jump"]
[connection signal="actionD" from="DoorDialog" to="Player" method="walk_to" binds= [ "../DoorDialog" ]]
[connection signal="actionE" from="DoorDialog" to="Camera" method="screen_shake" binds= [ 12 ]]
[connection signal="actionF" from="DoorDialog" to="DustCloud" method="show"]
[connection signal="actionG" from="DoorDialog" to="Player" method="bounce_towards" binds= [ -2 ]]
[connection signal="actionH" from="DoorDialog" to="Timmy" method="bounce_towards" binds= [ -1 ]]
[connection signal="actionJ" from="DoorDialog" to="Timmy" method="fly_to" binds= [ "../WalkTo_Target2" ]]
[connection signal="actionK" from="DoorDialog" to="Timmy" method="fly_to"]
[connection signal="actionL" from="DoorDialog" to="Timmy" method="look_at_node" binds= [ "../Timmy" ]]
[connection signal="body_entered" from="DoorDialog/DialogBox" to="DoorDialog/Door" method="play_if_player" binds= [ "open" ]]
[connection signal="body_exited" from="DoorDialog/DialogBox" to="DoorDialog/Door" method="play_if_player" binds= [ "close" ]]
[connection signal="finished" from="MusicIntro" to="Music" method="start_music"]
[connection signal="ready" from="MusicIntro" to="Music" method="stop_music"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
[connection signal="tween_all_completed" from="DustCloud/Tween" to="DustCloud" method="_on_Tween_tween_all_completed"]
[connection signal="action1" from="HatKidRoom" to="Player" method="watch_node" binds= [ "../Timmy" ]]
[connection signal="action1" from="HatKidRoom" to="Player" method="bounce_back" binds= [ "../WalkTo_Target4" ]]
[connection signal="action1" from="HatKidRoom" to="Timmy" method="make_visible"]
[connection signal="action2" from="HatKidRoom" to="Timmy" method="walk_to" binds= [ "../WalkTo_Target1" ]]
[connection signal="action3" from="HatKidRoom" to="CameraCapture2" method="capture"]
[connection signal="action4" from="HatKidRoom" to="Timmy" method="teleport_to" binds= [ "../Teleport_Target" ]]
[connection signal="action4" from="HatKidRoom" to="Timmy" method="walk_to" binds= [ "../WalkTo_Target2", -1, 1 ]]
[connection signal="action5" from="HatKidRoom" to="Player" method="teleport_to" binds= [ "../Teleport_Target" ]]
[connection signal="action5" from="HatKidRoom" to="Player" method="walk_to" binds= [ "../WalkTo_Target3" ]]
[connection signal="action6" from="HatKidRoom" to="Player" method="fly_to" binds= [ "../WalkTo_Target2" ]]
[connection signal="action7" from="HatKidRoom" to="Player" method="blow_back" binds= [ true ]]
[connection signal="action7" from="HatKidRoom" to="CameraCapture2" method="capture_release" binds= [ false ]]
[connection signal="action8" from="HatKidRoom" to="Player" method="stop_watching"]
[connection signal="action9" from="HatKidRoom" to="Camera" method="screen_shake" binds= [ 0, 3.0 ]]
[connection signal="action9" from="HatKidRoom" to="LilenController" method="generate" binds= [ 16 ]]
[connection signal="actionA" from="HatKidRoom" to="Timmy" method="walk_to" binds= [ "../WalkTo_Target4", 1, 1 ]]
[connection signal="actionA" from="HatKidRoom" to="DustCloud" method="hide"]
[connection signal="actionA" from="HatKidRoom" to="LilenController" method="hide_after_reaching_pos"]
[connection signal="actionA" from="HatKidRoom" to="LilenController" method="recall"]
[connection signal="actionA" from="HatKidRoom" to="LilenController" method="get_timepieces"]
[connection signal="actionB" from="HatKidRoom" to="Timmy" method="walk_to_then_leave" binds= [ "../DoorDialog" ]]
[connection signal="actionC" from="HatKidRoom" to="Player" method="jump"]
[connection signal="actionD" from="HatKidRoom" to="Player" method="walk_to" binds= [ "../DoorDialog" ]]
[connection signal="actionE" from="HatKidRoom" to="Camera" method="screen_shake" binds= [ 12 ]]
[connection signal="actionF" from="HatKidRoom" to="DustCloud" method="show"]
[connection signal="actionG" from="HatKidRoom" to="Player" method="bounce_towards" binds= [ -2 ]]
[connection signal="actionH" from="HatKidRoom" to="Timmy" method="bounce_towards" binds= [ -1 ]]
[connection signal="actionJ" from="HatKidRoom" to="Timmy" method="fly_to" binds= [ "../WalkTo_Target2" ]]
[connection signal="actionK" from="HatKidRoom" to="Timmy" method="fly_to"]
[connection signal="actionL" from="HatKidRoom" to="Timmy" method="look_at_node" binds= [ "../Timmy" ]]
[connection signal="body_entered" from="HatKidRoom/DialogBox" to="HatKidRoom/Door" method="play_if_player" binds= [ "open" ]]
[connection signal="body_exited" from="HatKidRoom/DialogBox" to="HatKidRoom/Door" method="play_if_player" binds= [ "close" ]]

[editable path="DoorDialog"]
[editable path="HatKidRoom"]
